src/objects/QPMS__Checklist__c.object
<CustomObject>
    <description>This is  a checklist object</description>
    <fields>
        <fullName>QPMS__Additional_Auditors__c</fullName>
        <description>This field is used to save additional auditors details</description>
        <label>Additional Auditors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__ApprovalProcess__c</fullName>
        <description>This field is used to store the approval process name</description>
        <label>ApprovalProcess</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Assigned To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag for checklist approval</description>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save the approver</description>
        <label>Approver_1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Checklists3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver_2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Checklists4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver_3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Checklists5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save the approver</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Checklists2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field is used to store assigned user to checklist</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Attached__c</fullName>
        <description>This field is used to differentiate the checklist associated with audit or planned audit or audit type</description>
        <label>Attached</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Program_Id__c</fullName>
        <description>This field is store the audit program id</description>
        <formula>QPMS__Audit__r.QPMS__Audit_Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Program Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is store the auditprogram</description>
        <label>Audit Program</label>
        <referenceTo>QPMS__Audit_Program__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Audit Type record</description>
        <inlineHelpText>Lookup to Audit Type record</inlineHelpText>
        <label>Audit Type</label>
        <referenceTo>QPMS__Audit_Type__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is to save audit value in checklist</description>
        <label>Audit</label>
        <referenceTo>QPMS__Audit__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__ChangeFieldApprovalStatus__c</fullName>
        <label>ChangeFieldApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Checklist_Number__c</fullName>
        <label>Checklist Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Checklist_Questions__c</fullName>
        <label>Checklist Questions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Checklist_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to differentiate one checklist form other checklist in complete checklist of audit</description>
        <label>Checklist Type</label>
        <referenceTo>QPMS__Checklist__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Complete_Checklist__c</fullName>
        <label>Complete Checklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__CreatedBy__c</fullName>
        <description>This field is used to save created by in component.</description>
        <formula>CreatedBy.FirstName  + &apos; &apos; +  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CurrentApprovalSequenceNumber__c</fullName>
        <description>This field is used to save approval sequence</description>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Detail__c</fullName>
        <description>This is Detail information related to Checklist object</description>
        <label>Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Evaluationtype__c</fullName>
        <description>This field is used to store the evaluation type of checklist in audit type</description>
        <label>Evaluation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scoring</fullName>
                </value>
                <value>
                    <fullName>Pass/Fail</fullName>
                </value>
                <value>
                    <fullName>Color</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Exported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used to store the checklist exported user name in checklist object</description>
        <label>Exported By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ChecklistsODy5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integration purposes</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Followers__c</fullName>
        <description>This field is for to display list of followers</description>
        <label>Followers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to save intial submitter in approval process</description>
        <label>Initial_Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Checklistsxlt4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Name__c</fullName>
        <formula>QPMS__Initiating_Site__r.Name</formula>
        <label>Initiating Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <defaultValue>&apos;Global_Quality_Group&apos;</defaultValue>
        <label>Initiating Site Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiating Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Is_Active__c</fullName>
        <description>To display the status of the Checklist</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>In-Active</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Last_Checkout_Check_in_by__c</fullName>
        <description>this  is used to store check in or check out or reset</description>
        <label>Last Checkout Check in by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checked in by</fullName>
                </value>
                <value>
                    <fullName>Checked out by</fullName>
                </value>
                <value>
                    <fullName>Undo Checked out by</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__New_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Checklists1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver_Owner_DueDate__c</fullName>
        <description>This field is used to save note to apporver data in approval process</description>
        <label>Note_To_Approver_Owner_DueDate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver__c</fullName>
        <description>note to approver for checklist object</description>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Old_Checklist_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this is used when checklist is cloning</description>
        <label>Old Checklist Id</label>
        <referenceTo>QPMS__Checklist__c</referenceTo>
        <relationshipLabel>Checklists (Old Checklist Id)</relationshipLabel>
        <relationshipName>Checklists1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Site_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Site Location</description>
        <inlineHelpText>Site Location</inlineHelpText>
        <label>Site Location</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Checklists (Site Location)</relationshipLabel>
        <relationshipName>LocationChecklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Site_Locations_Name__c</fullName>
        <formula>QPMS__Site_Location__r.Name</formula>
        <inlineHelpText>Site Location Name for Print and Details</inlineHelpText>
        <label>Site Locations</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Test_Date__c</fullName>
        <label>Test_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Test_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test_checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Title__c</fullName>
        <description>Title for checklist</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Total_Score_Available__c</fullName>
        <description>This field displays sum of max score of all questions in this checklist.</description>
        <label>Total Score Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Total_Score_Received__c</fullName>
        <description>This field is to display sum of the score received for all questions in the checklist.</description>
        <label>Total Score Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__UniqueName__c</fullName>
        <description>Unique Name of section</description>
        <displayFormat>s-{0000}</displayFormat>
        <inlineHelpText>Unique Name of section</inlineHelpText>
        <label>UniqueName</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>QPMS__UpdateChecklistWorkflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to overcome this issue
craete an audit with logged in user  and save.attach checklists to it.As workflow is on checklist ,it needs to be updated when parent audit is updated.in workflow we have third option that always check whether thenrecord has been updated or not.After attaching checklist if user goes back to audit page and clicks on submit without changing any field,the third criteria doesnt match ,that prevents the workflow from getting executed.</description>
        <label>UpdateChecklistWorkflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isCheckedOut__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this is used for checklist export information</description>
        <label>isCheckedOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in approval process to lock the record</description>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <label>Checklist</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Title__c</columns>
        <columns>QPMS__Evaluationtype__c</columns>
        <columns>QPMS__Is_Active__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>QPMS__Checklist_Questions__c</columns>
        <columns>QPMS__Attached__c</columns>
        <columns>QPMS__CreatedBy__c</columns>
        <columns>QPMS__Audit_Type__c</columns>
        <columns>QPMS__Audit_Program__c</columns>
        <columns>QPMS__Audit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CL- {0000}</displayFormat>
        <label>Checklist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>